kubernetes/default/linkstack/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkstack
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: network
  hostnames:
    - "link.beee.gay"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkstack
          port: 80
